install(FILES
    "org.deepin.dde.treeland.json"
    DESTINATION "${CMAKE_INSTALL_DATADIR}/dsg/configs/org.deepin.dde.treeland"
)

install(FILES
    "org.deepin.dde.treeland.user.json"
    DESTINATION "${CMAKE_INSTALL_DATADIR}/dsg/configs/org.deepin.dde.treeland.user"
)

install(FILES
    "org.deepin.dde.treeland.output.json"
    DESTINATION "${CMAKE_INSTALL_DATADIR}/dsg/configs/org.deepin.dde.treeland.output"
)
